--- a/src/html/etusivu.html
+++ b/src/html/etusivu.html
@@ -3,8 +3,46 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Komia sivusto</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="etusivu.html">Etusivu</a></li>
+                <li><a href="anu.html">Anu</a></li>
+                <li><a href="elmo.html">Elmo</a></li>
+                <li><a href="mari.html">Mari</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="col-md-4">
+        <carousel>
+            asgas
+        </carousel>
+    </div>
+    <div class="col-md-4">
+        <carousel>
+            asgas
+        </carousel>
+    </div>
+    <div class="col-md-4">
+        <carousel>
+            asgas
+        </carousel>
+    </div>
+</div>
 </body>
 </html>
