--- a/src/html/etusivu.html
+++ b/src/html/etusivu.html
@@ -22,6 +22,7 @@
                 <li class="active"><a href="etusivu.html">Etusivu</a></li>
                 <li><a href="anu.html">Anu</a></li>
                 <li><a href="elmo.html">Elmo</a></li>
+                <li><a href="julius.html">Elmo</a></li>
                 <li><a href="mari.html">Mari</a></li>
             </ul>
         </div>
