--- a/src/html/etusivu.html
+++ b/src/html/etusivu.html
@@ -64,5 +64,19 @@
         </div>
     </div>
 </div>
+    
+<div class="container">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <h3><a href="julius.html">Juliuksen sivu</h3></a>
+            <div>
+                Sivu on tehty isolta osin bootsrapin avulla, siten että sivu skaalautuu näytönkoon mukaan. Bootstrappiä käytetty buttoneissa, taulukossa ja oman sivun tab-navissa. 
+                Välilehdelle ”tuotteet” on tehty buttonit, jotka toimivat javascriptin avulla siten että painamalla saa kuvan halutusta tuotteesta esiin ja painamalla buttonia uudestaan sen saa piiloon. 
+                Animaatio tehty välilehdelle ”Liity-jäseneksi”. Kuva laitettu kulkemaan edestakaisin loputtoman ajan verran ja kääntyy aina päädyissä. välilehdelle tehty myös javascriptillä button ”Jamke nimesi” Joka antaa käyttäjälle uuden nimen.
+                Sivulla ”Tilaa” myös edellisen tehtävän sisältöä, muokaten sitä tähän soveltuvammaksi. Käytin edellisen tehtävä lomake pohjaa, jossa voi lisätä ja vähentää + ja – painikkeista tuotteiden määrää. Kenttiä täyttämällä saa yhteensä kenttään tuotteiden yhteissumman. Kenttiin voi myös syöttää tuotteiden määrän ja entteriä painamalla hinnat päivittyvät. Lisäsin myös taulukkoon sähköposti, nimi, ja toimitusosoite kentän, jotka ovat merkitty pakollisiksi.
+                (Julius Pehkonen)
+        </div>
+    </div>
+</div>    
+    
 </body>
 </html>
