tödö without carousel

--- a/src/html/elmo.html
+++ b/src/html/elmo.html
@@ -29,9 +29,8 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">poista</span></button>
-                    <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-                    <h4 class="modal-title">Edit</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label='Close' title="Sulje ikkuna"><span class="button" data-dismiss="modal" aria-label="Close">Sulje</span></button>
+                    <h4 class="modal-title">Muokkaa tehtävää</h4>
                 </div>
 
                 <div class="modal-body">
@@ -39,7 +38,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="edit-button" data-dismiss="modal">Save changes</button>
+                    <button type="button" class="btn btn-primary" id="edit-button" data-dismiss="modal">Tallenna</button>
                 </div>
 
             </div>
@@ -49,4 +48,3 @@
 
 </div>
 </body>
-</html>
