--- a/src/html/elmo.html
+++ b/src/html/elmo.html
@@ -12,39 +12,73 @@
 </head>
 
 <body>
-<div class="container" style="margin-top:30px;">
-    <div class="col-sm-offset-3 col-sm-6">
-        <h1>Elmon muistilista</h1>
-        <ul class="list-group ">
-        </ul>
+<!--KARUSELLI-->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators visible-xs" >
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-        <div class="form-group">
-            <input id="main-input" type="text" class="form-control" placeholder="Mitäs lisätään">
+    <div class="carousel-inner" style="height:300px !important; margin-top:30px;">
+        <div class="item active">
+            <img src="../../img/html5.png" alt="HTML5" class="img-responsive center-block">
+            <div class="elmonTeksti">
+                <h3>HTML</h3>
+                <p>Hypertext Markup Language == HTML</p>
+            </div>
         </div>
 
+        <div class="item">
+            <img src="../../img/js.png" alt="JS" class="img-responsive center-block">
+            <div class="elmonTeksti">
+                <h3>JS</h3>
+                <p>JavaScript == JS</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="../../img/css.png" alt="CSS" class="img-responsive center-block">
+            <div class="elmonTeksti">
+                <h3>CSS</h3>
+                <p>Cascading Style Sheets == CSS</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--MUISTILISTA-ÄPPI-->
+<div class="container" style="margin-top:10px;">
+    <div class="jumbotron jumbotron-fluid">
+        <h1 class="elmonOtsikko">Elmon muistilista</h1>
+    </div>
+    <div class="col-sm-offset-3 col-sm-6">
+        <h1>Elmon muistilista</h1>
+        <ul class="list-group"></ul>
+        <div class="form-group">
+            <input id="main-input" type="text" class="form-control" placeholder="Lisää muistilistalle">
+        </div>
         <button type="button" class="btn btn-success" id="main-button">Lisää</button>
     </div>
-
     <div class="modal fade" id="editModal" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label='Close' title="Sulje ikkuna"><span class="button" data-dismiss="modal" aria-label="Close">Sulje</span></button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label='Close' title="Sulje ikkuna">
+                        <span class="button" data-dismiss="modal" aria-label="Close">Sulje</span></button>
                     <h4 class="modal-title">Muokkaa tehtävää</h4>
                 </div>
 
                 <div class="modal-body">
                     <input type="text" class="form-control" id="edit-input">
                 </div>
-
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="edit-button" data-dismiss="modal">Tallenna</button>
+                    <button type="button" class="btn btn-primary" id="edit-button" data-dismiss="modal">Tallenna
+                    </button>
                 </div>
 
             </div>
         </div>
     </div>
-
-
 </div>
 </body>
