--- a/src/html/etusivu.html
+++ b/src/html/etusivu.html
@@ -76,7 +76,13 @@
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <h3><a href="elmo.html">Elmon sivu</h3></a>
             <div>
-                Tähän tulee jotain kivaaa
+                Halusin tehdä jotain uutta ja tästä syystä en käyttänyt edellisessä tehtävässä tehtyä tilauslomaketta.
+                Päädyin totetuttamaan TODO-sivun, missä tiedot tallennetaan localstorageen muistiin databasen sijaan.
+                TODO on tehty javascriptillä jQueryä käyttäen. Bootstrap on pitänyt sivun tyylittelystä huolen.
+                Jumbotronin sisälle on laitettu pyörimään carouselliin tässä tehtävässä käytettyjä tekniikoita.
+                Tein lisäksi mahdollisuuden muokata jo annettuja tehtäviä sen sijaan, että se aina poistettaisiin ja
+                tilalle luotaisiin uusi tehtävä.
+
             </div>
         </div>
     </div>
