--- a/src/html/elmo.html
+++ b/src/html/elmo.html
@@ -13,53 +13,53 @@
 
 <body>
 <!--KARUSELLI-->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators visible-xs" >
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <div class="carousel-inner" style="height:300px !important; margin-top:30px;">
-        <div class="item active">
-            <img src="../../img/html5.png" alt="HTML5" class="img-responsive center-block">
-            <div class="elmonTeksti">
-                <h3>HTML</h3>
-                <p>Hypertext Markup Language == HTML</p>
-            </div>
-        </div>
-
-        <div class="item">
-            <img src="../../img/js.png" alt="JS" class="img-responsive center-block">
-            <div class="elmonTeksti">
-                <h3>JS</h3>
-                <p>JavaScript == JS</p>
-            </div>
-        </div>
-
-        <div class="item">
-            <img src="../../img/css.png" alt="CSS" class="img-responsive center-block">
-            <div class="elmonTeksti">
-                <h3>CSS</h3>
-                <p>Cascading Style Sheets == CSS</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <!--MUISTILISTA-ÄPPI-->
 <div class="container" style="margin-top:10px;">
     <div class="jumbotron jumbotron-fluid">
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators visible-xs">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner" style="max-height:85px">
+                <div class="item active">
+                    <img src="../../img/html5.png" alt="HTML5" class="img-responsive center-block" width="40"
+                         height="50">
+                    <div class="elmonTeksti">
+                        <p>Hypertext Markup Language == HTML</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="../../img/js.png" alt="JS" class="img-responsive center-block" width="40" height="45">
+                    <div class="elmonTeksti">
+                        <p>JavaScript == JS</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="../../img/css.png" alt="CSS" class="img-responsive center-block" width="40" height="45">
+                    <div class="elmonTeksti">
+                        <p>Cascading Style Sheets == CSS</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <h1 class="elmonOtsikko">Elmon muistilista</h1>
     </div>
     <div class="col-sm-offset-3 col-sm-6">
-        <h1>Elmon muistilista</h1>
+        <h1>Lista</h1>
         <ul class="list-group"></ul>
         <div class="form-group">
             <input id="main-input" type="text" class="form-control" placeholder="Lisää muistilistalle">
         </div>
         <button type="button" class="btn btn-success" id="main-button">Lisää</button>
     </div>
+    <a href="etusivu.html">Palaa etusivulle</a>
     <div class="modal fade" id="editModal" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -81,4 +81,7 @@
         </div>
     </div>
 </div>
+<footer class="container" style="margin-top: 35px">
+    <p class="footerText">@Elmo Visuri</p>
+</footer>
 </body>
